--- a/index.html
+++ b/index.html
@@ -47,33 +47,13 @@
                 <div class="memo__head" contenteditable="true"></div>
                 <div class="memo__body" contenteditable="true"></div>
             </div>
-            <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div>
-            <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div>
-            <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div>
-            <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div>
-            <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div> -->
         </div>
 
         <!-- 메모가 없을 때 -->
-        <div class="memo-empty">
+        <!-- <div class="memo-empty">
             <p class="memo-empty__text">메모가 없습니다.<br>메모를 작성해주세요.</p>
             <button class="memo-empty__button">작성하기</button>
-        </div>
+        </div> -->
         <!-- //메모가 없을 때 -->
     </section>
 </main>
