컬러값 추가

--- a/index.html
+++ b/index.html
@@ -42,19 +42,31 @@
             </div>
         </article>
 
-        <div class="memo-view-area">
-            <!-- <div class="memo">
-                <div class="memo__head" contenteditable="true"></div>
-                <div class="memo__body" contenteditable="true"></div>
-            </div>
-        </div>
+        <article class="memo-view-area"></article>
 
-        <!-- 메모가 없을 때 -->
-        <!-- <div class="memo-empty">
-            <p class="memo-empty__text">메모가 없습니다.<br>메모를 작성해주세요.</p>
-            <button class="memo-empty__button">작성하기</button>
-        </div> -->
-        <!-- //메모가 없을 때 -->
+        <article class="modify-wrapper">
+            <div class="modify-filter"></div>
+            <div class="modify-area">
+                <div class="modify__head" contenteditable="true"></div>
+                <div class="modify__contents" contenteditable="true"></div>
+                <div class="modify__action">
+                    <button type="button" class="modify__button modify__button--save">저장</button>
+                    <button type="button" class="modify__button modify__button--cancel">취소</button>
+                </div>
+            </div>
+        </article>
+    </section>
+    <section class="palette">
+        <a href="#" class="palette__item palette__item--1" data-color="1"></a>
+        <a href="#" class="palette__item palette__item--2" data-color="2"></a>
+        <a href="#" class="palette__item palette__item--3" data-color="3"></a>
+        <a href="#" class="palette__item palette__item--4" data-color="4"></a>
+        <a href="#" class="palette__item palette__item--5" data-color="5"></a>
+        <a href="#" class="palette__item palette__item--6" data-color="6"></a>
+        <a href="#" class="palette__item palette__item--7" data-color="7"></a>
+        <a href="#" class="palette__item palette__item--8" data-color="8"></a>
+        <a href="#" class="palette__item palette__item--9" data-color="9"></a>
+        <a href="#" class="palette__item palette__item--10" data-color="10"></a>
     </section>
 </main>
 
