--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header-wrapper">
     <h1 class="header__text"><strong>메모장</strong></h1>
     <div class="header__info">
-        <span class="header__user-name">leecho</span>
+        <span class="header__user-name"></span>
         <span class="header__thumb">
             <img src="./src/images/thumb.png" alt="" class="header__user-img">
         </span>
@@ -67,6 +67,7 @@
         <a href="#" class="palette__item palette__item--8" data-color="8"></a>
         <a href="#" class="palette__item palette__item--9" data-color="9"></a>
         <a href="#" class="palette__item palette__item--10" data-color="10"></a>
+        <button type="button" class="palette__button">닫기</button>
     </section>
 </main>
 
